<resources>
    <string name="app_name">GuassApp_byAnnaZaqaryan</string>
    <string name="getStarted1">Get</string>
    <string name="getStarted2">Started</string>
    <string name="guess">Guess</string>
    <string name="theNumber">the number</string>
    <string name="enjoy">Enjoy</string>
    <string name="Playing">playing</string>
    <string name="mainPageText1">You have 3 chances left</string>
    <string name="chancesLeftIs3">You have 3 chances left</string>
    <string name="chancesLeftIs2">You have 2 chances left</string>
    <string name="chancesLeftIs1">You have 1 chances left</string>
    <string name="mainPageText2">to find the secret code</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wellDone">Well done</string>
    <string name="youFoundAnswer">You found the correct answer</string>
    <string name="continuee">Continue</string>
    <string name="wrong">Wrong</string>
    <string name="incorrectAnswer">This is not the correct answer</string>
    <string name="back">Back</string>
    <string name="play">Play</string>
    <string name="login">Login</string>
    <string name="forgotPassord">Forgot password?</string>
    <string name="info_updated">Your information has been updated.</string>
    <string name="emailWasSent">An email was sent to change your password</string>
    <string name="submit">Submit</string>
    <string name="submitEmail">Please submit your email address. You will then receive by email a link to reset your
        password.
    </string>
    <string name="mail">Email</string>
    <string name="save">Save</string>
    <string name="civility">Civility</string>
    <string name="password">Password</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="e_mail">E-mail</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
</resources>
