<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".fragment.LoginFragment">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:background="@color/appColor"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/appColor">

            <ImageView
                    android:id="@+id/img_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:elevation="3dp"
                    android:src="@drawable/app_icon"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            />


            <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/e_mail"
                    android:backgroundTint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/noto_sans_regular"
                    android:textSize="16sp"
                    android:textColorHint="@color/colorWhite"
                    android:foregroundTint="@color/colorWhite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/loginMessageText"
                    android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
                    android:drawableStart="@drawable/mail_icon" android:drawablePadding="10dp"/>

            <EditText
                    android:id="@+id/edit_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:drawableLeft="@drawable/password_icon"
                    android:hint="@string/password"
                    android:textColorHint="@color/colorWhite"
                    android:inputType="textPassword"
                    android:backgroundTint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/noto_sans_regular"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/edit_name"
                    android:drawablePadding="10dp"/>

            <Button
                    android:id="@+id/loginBttn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_white_shape"
                    android:overScrollMode="always"
                    android:text="@string/login"
                    android:textColor="#000000"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    app:fabSize="normal"
                    android:fontFamily="@font/noto_sans_regular"
                    android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="70dp" app:layout_constraintTop_toBottomOf="@+id/edit_surname"/>
            <Button
                    android:text="@string/forgotPassord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/forgotPasswordBttn"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/noto_sans_regular"
                    app:layout_constraintTop_toBottomOf="@id/loginBttn"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:textSize="14sp" android:background="@null"/>
            <TextView
                    android:text="@string/emailWasSent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/noto_sans_regular"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:background="@drawable/info_updated_backg"
                    android:id="@+id/loginMessageText"
                    app:layout_constraintTop_toBottomOf="@+id/img_photo" android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp" android:layout_marginStart="24dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="8dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
 </layout>