<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".fragment.AccountFragment">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:background="@color/appColor"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/appColor">

            <ImageView
                    android:id="@+id/img_photo"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/app_icon"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>


            <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:hint="@string/civility"
                    android:backgroundTint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/noto_sans_regular"
                    android:textSize="18sp"
                    android:textColorHint="@color/colorWhite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/messageText"
                    android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
                    android:drawablePadding="10dp"
                    app:layout_constraintHorizontal_bias="0.0" android:drawableStart="@drawable/civility_icon"/>

            <EditText
                    android:id="@+id/edit_surname"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:drawableStart="@drawable/first_name_icon"
                    android:hint="@string/firstName"
                    android:textColorHint="@color/colorWhite"
                    android:backgroundTint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/noto_sans_regular"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/edit_name"
                    android:drawablePadding="10dp"/>

            <EditText
                    android:id="@+id/edit_surname2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:drawableStart="@drawable/mail_icon"
                    android:hint="@string/e_mail"
                    android:textColorHint="@color/colorWhite"
                    android:backgroundTint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/noto_sans_regular"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                    android:drawablePadding="10dp" app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintTop_toBottomOf="@+id/edit_lastName"/>
            <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:drawableLeft="@drawable/password_icon"
                    android:hint="Password"
                    android:textColorHint="@color/colorWhite"
                    android:inputType="textPassword"
                    android:backgroundTint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/noto_sans_regular"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                    android:drawablePadding="10dp" app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintTop_toBottomOf="@+id/edit_surname2"/>
            <EditText
                    android:id="@+id/edit_lastName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:drawableStart="@drawable/last_name_icon"
                    android:hint="@string/lastName"
                    android:textColorHint="@color/colorWhite"
                    android:inputType="textPassword"
                    android:backgroundTint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/noto_sans_regular"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                    android:drawablePadding="10dp" app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintTop_toBottomOf="@+id/edit_surname"/>
            <EditText
                    android:id="@+id/edit_language"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:drawableStart="@drawable/language_icon"
                    android:hint="@string/language"
                    android:textColorHint="@color/colorWhite"
                    android:backgroundTint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/noto_sans_regular"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                    android:drawablePadding="10dp" app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintTop_toBottomOf="@+id/edit_password"/>
            <EditText
                    android:id="@+id/edit_country"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:drawableStart="@drawable/country_icon"
                    android:hint="@string/country"
                    android:textColorHint="@color/colorWhite"
                    android:inputType="textPassword"
                    android:backgroundTint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/noto_sans_regular"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                    android:drawablePadding="10dp" app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintTop_toBottomOf="@+id/edit_language"/>
            <Button
                    android:id="@+id/saveBttn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_white_shape"
                    android:overScrollMode="always"
                    android:text="@string/save"
                    android:textColor="#000000"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    app:fabSize="normal"
                    android:fontFamily="@font/noto_sans_regular"
                    android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/edit_country"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
            <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/noto_sans_regular"
                    android:textSize="18sp"
                    android:text="@string/info_updated"
                    android:gravity="center"
                    android:padding="10dp"
                    android:background="@drawable/info_updated_backg"
                    android:id="@+id/messageText"
                    app:layout_constraintTop_toBottomOf="@+id/img_photo" android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>