<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".fragment.ForgotPasswordFragment"
        android:id="@+id/layout">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/appColor">

        <ImageView
                android:id="@+id/img_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/app_icon"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.497"/>


        <EditText
                android:id="@+id/edit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/mail"
                android:backgroundTint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/noto_sans_regular"
                android:textSize="18sp"
                android:textColorHint="@color/colorWhite"
                android:foregroundTint="@color/colorWhite"
                android:drawableStart="@drawable/mail_icon" android:drawablePadding="10dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/messageText"
                app:layout_constraintVertical_bias="0.113"/>

        <Button
                android:id="@+id/submitBttn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_white_shape"
                android:overScrollMode="always"
                android:text="@string/submit"
                android:textColor="#000000"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:fabSize="normal"
                android:fontFamily="@font/noto_sans_regular"
                android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/edit_name"/>
        <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/noto_sans_regular"
                android:textSize="18sp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/submitEmail"
                android:id="@+id/messageText"
                app:layout_constraintTop_toBottomOf="@+id/img_photo" android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

